vuejs/vuejs-tests/testData/highlighting/colonInEventName.vue
<template>
  <div @update:property=''></div>
  <div <warning descr="Attribute update:property is not allowed here"><error descr="Namespace 'update' is not bound">update</error>:property</warning>=''></div>
</template>